# prosumer_price_incentive

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.scaled  Dockerfile.unscaled  LICENSE  ResourceTools.py  SystemAnalysis.py  analyze.py  blacklisted.txt  build.sh  columbia_lmp.csv  lmp_consolidate.py  lmp_downloader.py  locations.json  merge_csv.py  run_sam.sh  stationparse.py  us census bureau regions and divisions.csv  utils.py
notebooks/: analyze.py  generate_csv.py  merge_csv.py  scratchpad.ipynb
notebooks/analysis/: ResourceTools.py  SystemAnalysis.py  utils.py
notebooks/data/: blacklisted.txt  locations.csv  short-run price elasticities for the residential electricity market.csv  us electricity rates.csv
notebooks/data/rates/City of Saint Louis, Missouri/MISO/: prices.csv
notebooks/data/rates/Fargo, North Dakota/MISO/: prices.csv
notebooks/data/rates/Fargo, North Dakota/SPP/: prices.csv
notebooks/data/rates/Houston, Texas/ERCOT/: prices.csv
notebooks/data/rates/Houston, Texas/MISO/: prices.csv
notebooks/data/rates/Kansas City, Missouri/SPP/: prices.csv
notebooks/fargo_miso/: Fargo North Dakota MISO.csv
patches/: CMakeLists.txt  ssc-2022.11.21.r3.ssc.280.patch
